[project]
name = "comfyui-videohelpersuite-s3"
description = "Video Helper Suite with S3 upload capabilities"
version = "1.6.1"
license = { file = "LICENSE" }
dependencies = ["opencv-python", "imageio-ffmpeg", "boto3", "python-dotenv"]

[project.urls]
Repository = "https://github.com/stakeordie/ComfyUI-VideoHelperSuite"

#  Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = "stakeordie"
DisplayName = "ComfyUI-VideoHelperSuite-S3"
Icon = ""
